style: fixed"entertainment" word (too big when screen size is small); removed: redundant code

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -18,7 +18,7 @@
     width: 100%;
     text-align: center;
     padding: 20px 50px;
-    padding-bottom: 30px;
+    padding-top: 50px;
     position: relative;
 
     .text{
@@ -30,7 +30,7 @@
       max-width: 700px;
       margin: 0 auto 30px;
       align-self: center;
-      @include transition;
+      transition: all .3s ease-out;
 
       h1 {
         font-weight: 800;
@@ -56,7 +56,7 @@
       a{
         margin: 10px;
         opacity: .6;
-        @include transition;
+        transition: all .3s ease-out;
 
         i{
           font-size: 20px;
@@ -81,48 +81,30 @@
   }
 
 
-  @media (max-width: 950px){
-    .header-content{
-      .text{
-        width: 80%;
-        margin: 0 auto;
-        justify-content: center;
-        text-align: center;
-      }
-
-      .image{
-        margin: 30px;
-
-        img{
-          max-width: 500px;
-        }
-      }
-    }
-  }
-
   @media (max-width: 880px){
     .header-content{
       justify-content: center;
       padding: 0;
 
       .text{
-        width: calc(100% - 50px);
-        text-align: center;
-        justify-self: center;
-        padding: 30px 0;
+       h1{
+         font-size: 3.5em;
+       }
 
 
       }
     }
   }
 
-  @media (max-width: 520px){
+  @media (max-width: 578px){
     .header-content{
-      padding: 0px;
-
       .text{
         h1{
-          font-size: 3.5em;
+          font-size: 3em;
+          .txt-small{
+            font-size: 0.8em;
+            display: block;
+          }
         }
       }
     }
